Change Log for Kicad
Started 2007-June-11

Please add newer entries at the top, list the date and your name with 
email address.

2007-Nov-13 UPDATE   Geoff Harland <gharlandau@yahoo.com.au>
================================================================================
+ eeschema & pcbnew
  * The "Page Settings" dialog box has been enhanced; it now includes a
    wxStdDialogButtonSizer, and is also now designed to be expandable.
+ pcbnew
  * The "DRC Control" and "Netlist:" dialog boxes have also been enhanced. Each
    of those dialogs now includes a wxStdDialogButtonSizer and a "Cancel" button,
    (so each of those dialogs can now (otherwise) be cancelled by pressing the
    "Esc" key), and is also now designed to be expandable.


2007-Nov-11 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+ pcbnew
    Fixed modedit.cpp bug which occurred when selecting a non pad item (such
    as a text field) in the module editor, then selecting Dimensions -> Pad Settings
    in the module editor.

    
2007-Nov-11 UPDATE   Geoff Harland <gharlandau@yahoo.com.au>
================================================================================
+ eeschema & pcbnew & gerbview
  * The "Colors" dialog box has been enhanced; the distance between adjacent
    controls now increases (and in both horizontal and vertical directions)
    when that dialog is resized. And the "Cancel" button is no longer centre-
    justified; it is now right-justifed instead.
+ eeschema
  * A wxStdDialogButtonSizer is now used within the "EESchema Colors" dialog box,
    meaning that the sequence of the "OK", "Cancel", and "Apply" buttons within
    that dialog now depends upon which (OS) version of KiCad is being used (and
    thus matching the nature of the corresponding dialogs within Pcbnew and GerbView
    in that regard). (As of yet, the vertical distance between adjacent controls